--- a/donateus.html
+++ b/donateus.html
@@ -125,10 +125,10 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <center><img class="d-block w-30 sli_i-1" src="/images/SCAN HERE.png" alt="First slide"></center>
+                <center><img class="d-block w-30 sli_i-1" src="/images/qr-code.png" alt="First slide"></center>
               </div>
               <div class="carousel-item">
-                <center><img class="d-block w-100 sli_i-2" src="/images/donate.jpg" alt="Second slide"></center>
+                <center><img class="d-block w-100 sli_i-2" src="/images/donate.png" alt="Second slide"></center>
               </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
