--- a/hindi.html
+++ b/hindi.html
@@ -93,8 +93,8 @@
           </div>
           <div class="carousel-item" style="background-color:#FFF8F3" id="donate" >
            <center><h3 style="font-family: 'Arima Madurai'">हमें दान करें</h3></center>
-            <center><img  class="d-block w-20 sli_i-2" src="/images/QR-code.jpeg" alt="Second slide"></center>
-            <center><h5 class="upi">UPI ID-SVGSDTC@SBI</h5></center>
+            <center><img  class="d-block w-20 sli_i-2" src="/images/qr-code.png" alt="Second slide"></center>
+           
           </div>
           
         </div>
