--- a/gallery.html
+++ b/gallery.html
@@ -77,7 +77,7 @@
                       ABOUT US
                     </button>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="/ano.html">ENGLISH</a>
+                      <a class="dropdown-item" href="/index.html">ENGLISH</a>
                       <a class="dropdown-item" href="/telgu.html">TELUGU</a>
                       <a class="dropdown-item" href="/kannada.html">KANNADA</a>
                       <a class="dropdown-item" href="/hindi.html">HINDI</a>                      
