--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                       LANGUAGE
                     </button>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="/ano.html">English</a>
+                      <a class="dropdown-item" href="/index.html">English</a>
                       <a class="dropdown-item" href="/telgu.html">TELUGU</a>
                       <a class="dropdown-item" href="/kannada.html">KANNADA</a>
                       <a class="dropdown-item" href="/hindi.html">HINDI</a>                      
