--- a/donateus.html
+++ b/donateus.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Benne&family=Island+Moments&family=Moon+Dance&family=Noto+Sans+Kannada:wght@700&family=Noto+Sans+Telugu:wght@300&family=Palanquin+Dark:wght@600&family=Pragati+Narrow&family=Ramabhadra&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Benne&family=Island+Moments&family=Moon+Dance&family=Noto+Sans+Kannada:wght@700&family=Noto+Sans+Telugu:wght@300&family=Orelega+One&family=Palanquin+Dark:wght@600&family=Pragati+Narrow&family=Ramabhadra&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
 <style>
 .qrcode{
     width:350px;
@@ -26,8 +27,8 @@
 }
 .para{
     color: darkslategray;
-    font-size:1.5rem;
-    font-family: 'Moon Dance', cursive;
+    font-size:1.7rem;
+    font-family: 'Orelega One', cursive;
     font-weight: 600;
     padding: 2rem;
 }
@@ -122,6 +123,7 @@
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -129,6 +131,9 @@
               </div>
               <div class="carousel-item">
                 <center><img class="d-block w-100 sli_i-2" src="/images/donate.png" alt="Second slide"></center>
+              </div>
+              <div class="carousel-item">
+                <center><img class="d-block w-30 sli_i-1" src="/images/more_info.png" alt="Second slide"></center>
               </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
