--- a/kannada.html
+++ b/kannada.html
@@ -15,12 +15,21 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Benne&family=Bree+Serif&family=Island+Moments&family=Moon+Dance&family=Noto+Sans+Kannada:wght@700&family=Noto+Sans+Telugu:wght@300&family=Orelega+One&family=Palanquin+Dark:wght@600&family=Pragati+Narrow&family=Ramabhadra&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
 <style>
 .sli_i-1{
-  height:500px;
+  height:350px;
+  float:left;
+  padding-right:22px;
 }
 .sli_i-2{
   height:300px;
+}
+.para{
+  padding: 7px;
+  margin-left: 2px;
+  font-family: 'Noto Sans Kannada', sans-serif;
+  font-size: 1.1rem;
 }
   </style>
 </head>
@@ -56,7 +65,7 @@
                     </button>
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="/index.html">ಆಂಗ್ಲ</a>
-                      <a class="dropdown-item" href="/telgu">ತೆಲುಗು</a>
+                      <a class="dropdown-item" href="/telgu.html">ತೆಲುಗು</a>
                       <a class="dropdown-item" href="/kannada.html">ಕನ್ನಡ</a>
                       <a class="dropdown-item" href="/hindi.html">ಹಿಂದಿ</a>                      
                     </div>
@@ -84,12 +93,35 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <center><h3 style="font-family: 'Arima Madurai'">ನಮ್ಮ ಬಗ್ಗೆ</h3></center>
-            <img class="d-block w-100 sli_i-1" src="/images/image-7.jpeg" alt="First slide">
-           
+            <center><h3 style="font-family: 'Arima Madurai';font-weight: 700;">ನಮ್ಮ ಬಗ್ಗೆ</h3></center>
+            <img class="d-block w-70 sli_i-1" src="/images/image-7.jpeg" alt="First slide">
+            <blockquote class="para"><p > 
+              ಆತ್ಮೀಯ ಸ್ನೇಹಿತರೇ, ಹಸುವಿನ ಸೇವೆ (ಗೋ-ಸೇವೆ) ಅತ್ಯುನ್ನತವಾಗಿದೆ ಎಂದು ನಮಗೆ ತಿಳಿದಿದೆ
+ವೇದಗಳಲ್ಲಿ ಸ್ಥಾನ ಮತ್ತು ಹಸುವನ್ನು 'ತಾಯಿ' ಎಂದು ಪರಿಗಣಿಸಲಾಗುತ್ತದೆ. ಸದಸ್ಯರಾಗಿ
+ಶ್ರೀ ವೇಣುಗೋಪಾಲ ಸ್ವಾಮಿ ಅಭಿವೃದ್ಧಿ ಸಮಿತಿಯನ್ನು ಪುನರ್‌ರಚಿಸಿದ್ದೇವೆ, ನಾವು ರಚಿಸಿದ್ದೇವೆ
+ಹಸುಗಳಿಗೆ ಆರಾಮದಾಯಕ ಜೀವನ ಪರಿಸ್ಥಿತಿಗಳನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಲು ಕೆಲವು ಉದ್ದೇಶಗಳು
+ಕರುಗಳ ವಿಶೇಷ ಆರೈಕೆಯೊಂದಿಗೆ ಆಶ್ರಯ, ಸಾವಯವ ಹುಲ್ಲಿನ ಆಹಾರವನ್ನು ಒದಗಿಸುವುದು
+ಸ್ಥಿರ ಬೆಳವಣಿಗೆಯನ್ನು ಕಾಪಾಡಿಕೊಳ್ಳಲು. ಒಣ, ಹಸಿರು ಹುಲ್ಲು ಮತ್ತು ಧನ (ಹಸು ಆಹಾರ)
+ಪ್ರತಿ ದಿನ ಹಸುಗಳಿಗೆ ಆಹಾರವನ್ನು ನೀಡಲಾಗುತ್ತದೆ. ಪಶುವೈದ್ಯರಿಂದ ನಿಯಮಿತ ತಪಾಸಣೆ
+ವ್ಯವಸ್ಥೆ ಮಾಡಲಾಗಿದೆ. ಜಲ ಮೂಲಗಳು, ವಿದ್ಯುತ್ ಮತ್ತು ಮೂಲಸೌಕರ್ಯ
+ದೇವಾಲಯ ಮತ್ತು ಅದರ ಸುತ್ತಮುತ್ತಲಿನ ಪ್ರದೇಶಗಳನ್ನು ಒದಗಿಸಲಾಗಿದೆ.
+            </p></blockquote>
+<blockquote class="para">
+  <p>ಪ್ರಸ್ತುತ ಸುಮಾರು 40+ ಹಸುಗಳಿಗೆ ಮತ್ತು ನಿಯಮಿತವಾಗಿ ಆಶ್ರಯವನ್ನು ಒದಗಿಸಲಾಗಿದೆ
+    ಅಸಮರ್ಪಕ ಸ್ವಯಂ-ಹಸುಗಳ ಜೀವನ ಪರಿಸ್ಥಿತಿಗಳನ್ನು ಮೇಲ್ವಿಚಾರಣೆ ಮಾಡಲಾಗುತ್ತಿದೆ
+    ಸಮರ್ಥನೀಯ ಬಜೆಟ್.</p>
+</blockquote>
+<blockquote class="para">
+  <p>
+    ಸದಸ್ಯರಾಗಿ, ಕೈಬಿಟ್ಟ ಗೋವುಗಳ ಸೇವೆ ಮಾಡುವ ಉದ್ದೇಶದಿಂದ, ನಾವು
+"ಗೋ-ಸೇವೆ"ಗೆ ದೇಣಿಗೆ ನೀಡಲು ನಿಮ್ಮ ಬೆಂಬಲವನ್ನು ವಿನಂತಿಸಿ. ಆತ್ಮೀಯ ಸ್ನೇಹಿತರೇ, ಬೇರೆ ಇಲ್ಲ
+ದಾನವನ್ನು ಹಸು ದಾನದೊಂದಿಗೆ ಹೋಲಿಸಬಹುದು, ದಾನದ ಅಭ್ಯಾಸ
+ಏಕೆಂದರೆ ಗೋ-ಸೇವೆಯು ಶಾಶ್ವತವಾದ ಆಶೀರ್ವಾದವನ್ನು ಪಡೆಯುತ್ತದೆ ಏಕೆಂದರೆ ಅವನು ಎಲ್ಲಾ ದೇವರುಗಳಿಂದ ಆಶೀರ್ವದಿಸಲ್ಪಟ್ಟಿದ್ದಾನೆ.
+  </p>
+</blockquote>
           </div>
           <div class="carousel-item" style="background-color:#FFF8F3" id="donate" >
-           <center><h3 style="font-family: 'Arima Madurai'">ನಮಗೆ ದಾನ ಮಾಡಿ</h3></center>
+           <center><h3 style="font-family: 'Arima Madurai';font-weight: 600;">ನಮಗೆ ದಾನ ಮಾಡಿ</h3></center>
             <center><img  class="d-block w-20 sli_i-2" src="/images/qr-code.png" alt="Second slide"></center>
             <center><h5 class="upi">UPI ID-SVGSDTC@SBI</h5></center>
           </div>
