--- a/hindi.html
+++ b/hindi.html
@@ -15,12 +15,23 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Benne&family=Bree+Serif&family=Island+Moments&family=Moon+Dance&family=Noto+Sans+Kannada:wght@700&family=Noto+Sans+Telugu:wght@300&family=Orelega+One&family=Palanquin+Dark:wght@600&family=Pragati+Narrow&family=Ramabhadra&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
 <style>
 .sli_i-1{
-  height:500px;
+  height:350px;
+  float:left;
+  padding-right:22px;
 }
 .sli_i-2{
   height:300px;
+}
+.para{
+  padding: 7px;
+  margin-left: 2px;
+  font-family: 'Pragati Narrow', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
   </style>
 </head>
@@ -88,8 +99,26 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <center><h3 style="font-family: 'Arima Madurai'">हमारे बारे में</h3></center>
-            <img class="d-block w-100 sli_i-1" src="/images/image-7.jpeg" alt="First slide">
-           
+            <img class="d-block w-70 sli_i-1" src="/images/image-7.jpeg" alt="First slide">
+            <blockquote class="para"><p > 
+              एक सदस्य के रूप में, परित्यक्त गायों की सेवा करने के इरादे से, हम
+              "गो-सेवा" को दान करने के लिए आपके समर्थन का अनुरोध करें। प्रिय मित्रों, कोई और नहीं
+              दान की तुलना गाय के दान से की जा सकती है, दान की प्रथा
+              क्योंकि गो-सेवा को अनन्त आशीर्वाद प्राप्त होता है क्योंकि उसे सभी देवताओं का आशीर्वाद प्राप्त होता है।
+            </p></blockquote>
+<blockquote class="para">
+  <p>वर्तमान में लगभग 40+ गायों को आश्रय प्रदान किया गया है, और नियमित रूप से
+    गायों के रहने की स्थिति की निगरानी की जा रही है, अपर्याप्त स्व-
+    सतत बजट।</p>
+</blockquote>
+<blockquote class="para">
+  <p>
+    एक सदस्य के रूप में, परित्यक्त गायों की सेवा करने के इरादे से, हम
+"गो-सेवा" को दान करने के लिए आपके समर्थन का अनुरोध करें। प्रिय मित्रों, कोई और नहीं
+दान की तुलना गाय के दान से की जा सकती है, दान की प्रथा
+क्योंकि गो-सेवा को अनन्त आशीर्वाद प्राप्त होता है क्योंकि उसे सभी देवताओं का आशीर्वाद प्राप्त होता है।
+  </p>
+</blockquote>
           </div>
           <div class="carousel-item" style="background-color:#FFF8F3" id="donate" >
            <center><h3 style="font-family: 'Arima Madurai'">हमें दान करें</h3></center>
