--- a/index.html
+++ b/index.html
@@ -15,13 +15,27 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Benne&family=Bree+Serif&family=Island+Moments&family=Moon+Dance&family=Noto+Sans+Kannada:wght@700&family=Noto+Sans+Telugu:wght@300&family=Orelega+One&family=Palanquin+Dark:wght@600&family=Pragati+Narrow&family=Ramabhadra&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
 <style>
 .sli_i-1{
-  height:500px;
+  height:350px;
+  float:left;
+  padding-right:22px;
 }
+
 .sli_i-2{
   height:300px;
 }
+
+.para{
+  padding: 7px;
+  margin-left: 2px;
+  font-family: 'Bree Serif', serif;
+  font-size: 1rem;
+  font-weight:600;
+}
+
   </style>
 </head>
 <body>
@@ -89,8 +103,31 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <center><h3 style="font-family: 'Arima Madurai'">About US</h3></center>
-            <img class="d-block w-100 sli_i-1" src="/images/image-7.jpeg" alt="First slide">
-           
+            <center><img class="d-block w-70 sli_i-1" src="/images/image-7.jpeg" alt="First slide"></center>
+            <blockquote class="para"><p > 
+              Dear Friends, we know Service to cow (Go-Seva) is given the highest
+place in the Vedas and Cow is treated as ‘mother’. As members of the
+reconstituted Sri Venugopal Swamy Development committee, we framed
+few objectives to ensure comfortable living conditions to Cows by
+providing shelter, organic grass feed along with special care of the calves
+to maintain a steady growth. The dry, green grass and dhana (Cow Feed)
+are fed to the cows every day. Regular check-up by the veterinary doctor
+has been arranged. Water sources, Electricity and infrastructure of the
+temple and its surroundings have been provided.
+            </p></blockquote>
+<blockquote class="para">
+  <p>Presently shelter has been provided to around 40+ cows, and regularly
+    living conditions of the cows are being monitored, with inadequate self-
+    sustaining budget.</p>
+</blockquote>
+<blockquote class="para">
+  <p>
+    As a members, with an intention to serve the abandoned cows, we
+request your support to donate to the “Go-Seva”. Dear friends, No other
+donation can be compared with cow donation, the practice of donation
+for Go-Seva receives eternal blessing as he is blessed by all the gods.
+  </p>
+</blockquote>
           </div>
           <div class="carousel-item" style="background-color:#FFF8F3" id="donate" >
            <center><h3 style="font-family: 'Arima Madurai'">DONATE US</h3></center>
