--- a/kannada_donate.html
+++ b/kannada_donate.html
@@ -124,6 +124,7 @@
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -132,6 +133,10 @@
               <div class="carousel-item">
                 <center><img class="d-block w-100 sli_i-2" src="/images/donate.png" alt="Second slide"></center>
               </div>
+              <div class="carousel-item">
+                <center><img class="d-block w-30 sli_i-1" src="/images/more_info.png" alt="First slide"></center>
+              </div>
+              
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
