--- a/telgu.html
+++ b/telgu.html
@@ -17,12 +17,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Ramabhadra&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Timmana&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Benne&family=Bree+Serif&family=Island+Moments&family=Moon+Dance&family=Noto+Sans+Kannada:wght@700&family=Noto+Sans+Telugu:wght@300&family=Orelega+One&family=Palanquin+Dark:wght@600&family=Pragati+Narrow&family=Ramabhadra&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
 <style>
 .sli_i-1{
-  height:500px;
+  height:350px;
+  float:left;
+  padding-right:22px;
 }
 .sli_i-2{
   height:300px;
+}
+.para{
+  padding: 7px;
+  margin-left: 2px;
+  font-family: 'Noto Sans Telugu', sans-serif;
+  font-size: 1.1rem;
+  font-weight: 600;
 }
   </style>
 </head>
@@ -87,7 +97,33 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <center><h2 style="font-family: 'Timmana', sans-serif;">మా గురించి</h2></center>
-            <img class="d-block w-100 sli_i-1" src="/images/image-7.jpeg" alt="First slide">
+            <img class="d-block w-70 sli_i-1" src="/images/image-7.jpeg" alt="First slide">
+            <blockquote class="para"><p > 
+              ప్రియమైన మిత్రులారా, గోవుకు సేవ (గో-సేవ) అత్యున్నతమైనదని మాకు తెలుసు
+వేదాలలో స్థానం మరియు ఆవును 'తల్లి'గా వ్యవహరిస్తారు. సభ్యులుగా
+శ్రీ వేణుగోపాల స్వామి అభివృద్ధి కమిటీని పునర్నిర్మించాము, మేము రూపొందించాము
+ఆవులకు సౌకర్యవంతమైన జీవన పరిస్థితులను నిర్ధారించడానికి కొన్ని లక్ష్యాలు
+దూడల ప్రత్యేక సంరక్షణతో పాటు ఆశ్రయం, సేంద్రీయ గడ్డి దాణా అందించడం
+స్థిరమైన వృద్ధిని నిర్వహించడానికి. పొడి, పచ్చటి గడ్డి మరియు ధన (ఆవు మేత)
+ప్రతిరోజూ ఆవులకు మేత పెడతారు. వెటర్నరీ డాక్టర్ ద్వారా రెగ్యులర్ చెక్-అప్
+ఏర్పాటు చేయబడింది. నీటి వనరులు, విద్యుత్ మరియు మౌలిక సదుపాయాలు
+ఆలయం మరియు దాని పరిసరాలు అందించబడ్డాయి.
+            </p></blockquote>
+<blockquote class="para">
+  <p>
+    ప్రస్తుతం దాదాపు 40+ ఆవులకు ఆశ్రయం అందించబడింది మరియు క్రమం తప్పకుండా ఉంది
+    ఆవుల జీవన స్థితిగతులు సరికాని స్వీయ-పరిస్థితులతో పర్యవేక్షించబడుతున్నాయి.
+    నిలకడ బడ్జెట్.
+  </p>
+</blockquote>
+<blockquote class="para">
+  <p>
+    పాడుబడిన ఆవులకు సేవ చేయాలనే ఉద్దేశ్యంతో సభ్యులుగా, మేము
+"గో-సేవ"కు విరాళం ఇవ్వడానికి మీ మద్దతును అభ్యర్థించండి. ప్రియమైన మిత్రులారా, మరెవరూ లేరు
+విరాళాన్ని ఆవు దానంతో పోల్చవచ్చు, దానం చేయడం
+దేవతలందరిచే ఆశీర్వదించబడినందున గో-సేవ శాశ్వతమైన ఆశీర్వాదాన్ని పొందుతుంది.
+  </p>
+</blockquote>
            
           </div>
           <div class="carousel-item" style="background-color:#FFF8F3" id="donate" >
